<resources>
    <string name="app_name">GoGoYo</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="something_wrong">Something went Wrong!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_breed">品種</string>
    <string name="text_sex">性別</string>
    <string name="text_birth">生日</string>
    <string name="text_introduction">自我介紹</string>
    <string name="text_photo">照片</string>
    <string name="text_voice">聲音</string>
    <string name="text_video">影片</string>
    <string name="text_title">標題</string>
    <string name="text_content">內容</string>
    <string name="text_post">發佈</string>
    <string name="stop_count">暫停散步</string>
    <string name="countinue_count">繼續散步</string>
    <string name="time_format">00:00:00</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="age">年紀</string>
    <string name="text_friend">好友</string>
    <string name="no_registry_pet_text">未註冊寵物</string>
    <string name="go_text">Go!</string>
    <string name="who_go_to_walk_text">誰去散步?</string>
    <string name="start_to_make_new_friend_text">快去加入新朋友吧!</string>
    <string name="empty_pet_name_text">寵物姓名不可以空白!</string>
    <string name="empty_introduction_text">來段簡短的介紹讓大家更認識你!</string>
    <string name="empty_pet_gender_text">記得選擇寵物性別喔!</string>
    <string name="empty_pet_image_text">別忘記上傳一張寵物的萌照啊!</string>
    <string name="empty_user_name">姓名不可以空白!</string>
    <string name="empty_user_image_text">請上傳照片!</string>
    <string name="no_pet_video_text">目前沒有這隻寵物的影片喔!</string>
    <string name="no_pet_audio_text">還沒有上傳聲音喔!</string>
    <string name="friend_waiting_accept_text">等待中</string>
    <string name="friend_invite_text">好友邀請</string>
    <string name="friend_text">好友</string>
    <string name="pet_registry_limit_text">很抱歉，目前最多只能註冊五隻寵物</string>
    <string name="play_video_fail_text">影片播放失敗，請聯絡開發人員</string>
    <string name="user_article_text">我的動態</string>
    <string name="collect_text">收藏</string>
    <string name="add_new_pet_text">新增成員</string>
    <string name="pet_introduction_hint_text">我是一隻乖狗狗..</string>
    <string name="girl_text">女生</string>
    <string name="boy_text">男生</string>
    <string name="pet_name_hint_text">我叫做..</string>
    <string name="name_text">名字</string>
    <string name="upload_image_hint_text">點選上傳照片</string>
    <string name="uploading_text">上傳中...</string>
    <string name="upload_pet_video_text">上傳小短片</string>
    <string name="upload_pet_audio_text">上傳聲音</string>
    <string name="upload_audio_btn_text">上傳叫聲</string>
    <string name="edit_profile_text">修改資料</string>
    <string name="upload_video_btn_text">上傳影片</string>
    <string name="upload_change_image_text">點選更換照片</string>
    <string name="name_length_limit_text">請輸入字數小於 10 的名字</string>

    <string-array name="relation_array">
        <item>朋友</item>
        <item>好友邀請</item>
        <item>等待中</item>
    </string-array>
</resources>