<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.rn1.gogoyo.mypets.pet.ProfilePetViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mypets.pet.ProfilePetFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="#FFC107"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/myPetsViewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingStart="80dp"
                android:paddingEnd="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:onClick="@{() -> viewModel.onNavigateToNewPet()}"
                android:src="@drawable/add_pet3"
                android:visibility="@{viewModel.isLoginUser ? View.VISIBLE : View.GONE}"
                app:backgroundTint="@color/colorPrimaryDark"
                app:fabSize="mini"
                app:tint="@color/black_3f3a3a"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:maxImageSize="30dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view"
            android:background="#FEFEFE"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
            android:elevation="@dimen/elevation_all"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constPetInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <TextView
                    android:id="@+id/editPetInfoBt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/msg_bubble_custom"
                    android:layout_marginEnd="24dp"
                    android:onClick="@{()->viewModel.editPet()}"
                    android:text="編輯"
                    android:padding="4dp"
                    android:visibility="@{viewModel.isLoginUser ? viewModel.pet != null ? View.VISIBLE : View.GONE : View.GONE }"
                    app:layout_constraintBottom_toBottomOf="@+id/breedTitleEt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/breedTitleEt" />
<!--                <Button-->
<!--                    android:id="@+id/editPetInfoBt"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginEnd="24dp"-->
<!--                    android:insetTop="0dp"-->
<!--                    android:insetBottom="0dp"-->
<!--                    android:onClick="@{()->viewModel.editPet()}"-->
<!--                    android:text="編輯"-->
<!--                    android:padding="0dp"-->
<!--                    android:textAlignment="center"-->
<!--                    android:visibility="@{viewModel.isLoginUser ? viewModel.pet != null ? View.VISIBLE : View.GONE : View.GONE }"-->
<!--                    app:backgroundTint="#FFFFFF"-->
<!--                    app:fabSize="mini"-->
<!--                    app:icon="@drawable/edit_pet"-->
<!--                    app:iconPadding="0dp"-->
<!--                    app:iconSize="40dp"-->
<!--                    app:layout_constraintBottom_toBottomOf="@+id/breedTitleEt"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="@+id/breedTitleEt" />-->

                <!--                <TextView-->
                <!--                    android:id="@+id/birthTitleTv"-->
                <!--                    style="@style/TextStyleTitle1"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_marginStart="16dp"-->
                <!--                    android:layout_marginTop="24dp"-->
                <!--                    android:text="@string/age"-->
                <!--                    app:layout_constraintStart_toStartOf="parent"-->
                <!--                    app:layout_constraintTop_toBottomOf="@+id/sexTitleTv" />-->

                <TextView
                    android:id="@+id/breedTitleTv"
                    style="@style/TextStyleTitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/text_breed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sexTitleTv" />

                <TextView
                    android:id="@+id/sexTitleTv"
                    style="@style/TextStyleTitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/text_sex"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/introductionTitleTv"
                    style="@style/TextStyleTitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/text_introduction"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/breedTitleTv" />

                <TextView
                    android:id="@+id/voiceTitleTv"
                    style="@style/TextStyleTitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/text_voice"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/introductionTitleEt" />

                <!--                <EditText-->
                <!--                    android:id="@+id/birthTitleEt"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_marginStart="16dp"-->
                <!--                    android:layout_marginTop="24dp"-->
                <!--                    android:background="@android:color/transparent"-->
                <!--                    android:ems="10"-->
                <!--                    android:focusable="false"-->
                <!--                    android:focusableInTouchMode="false"-->
                <!--                    android:inputType="textPersonName"-->
                <!--                    android:text="@{String.valueOf(viewModel.pet.age)}"-->
                <!--                    app:layout_constraintStart_toEndOf="@+id/birthTitleTv"-->
                <!--                    app:layout_constraintTop_toBottomOf="@+id/sexTitleEt" />-->

                <TextView
                    android:id="@+id/videoTitleTv"
                    style="@style/TextStyleTitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/text_video"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/voiceTitleTv" />

                <EditText
                    android:id="@+id/breedTitleEt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="textPersonName"
                    android:text="@{viewModel.pet.breed}"
                    app:layout_constraintBottom_toBottomOf="@+id/breedTitleTv"
                    app:layout_constraintEnd_toStartOf="@+id/editPetInfoBt"
                    app:layout_constraintStart_toEndOf="@+id/breedTitleTv"
                    app:layout_constraintStart_toStartOf="@+id/introductionTitleEt"
                    app:layout_constraintTop_toTopOf="@+id/breedTitleTv" />

                <EditText
                    android:id="@+id/sexTitleEt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="textPersonName"
                    android:text="@{viewModel.pet.sex}"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/sexTitleTv"
                    app:layout_constraintEnd_toStartOf="@+id/editPetInfoBt"
                    app:layout_constraintStart_toStartOf="@+id/breedTitleEt"
                    app:layout_constraintTop_toTopOf="@+id/sexTitleTv" />

                <EditText
                    android:id="@+id/introductionTitleEt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="textPersonName"
                    android:text="@{viewModel.pet.introduction}"
                    app:layout_constraintBottom_toBottomOf="@+id/introductionTitleTv"
                    app:layout_constraintStart_toEndOf="@+id/introductionTitleTv"
                    app:layout_constraintTop_toTopOf="@+id/introductionTitleTv" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/audioPlayBt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/play_music"
                    app:backgroundTint="#FFFFFF"
                    app:fabSize="mini"
                    app:layout_constraintBottom_toBottomOf="@+id/voiceTitleTv"
                    app:layout_constraintStart_toEndOf="@+id/voiceTitleTv"
                    app:layout_constraintTop_toTopOf="@+id/voiceTitleTv" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/videoPlayBt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="PLAY"
                    android:textAlignment="center"
                    app:backgroundTint="#FFFFFF"
                    app:fabSize="mini"
                    app:icon="@drawable/play_video"
                    app:iconGravity="textStart"
                    app:layout_constraintBottom_toBottomOf="@+id/videoTitleTv"
                    app:layout_constraintStart_toEndOf="@+id/videoTitleTv"
                    app:layout_constraintTop_toTopOf="@+id/videoTitleTv" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>